# pasteboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c2p.cpp  main.cpp  messages.cpp  pasteboard.cpp
include/: c2p.h  console_color.h  pasteboard.h  resource_holder.h
